# libnexrad

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  ROADMAP.md
cmake/: config.h.in
colors/: CMakeLists.txt
doc/: main.dox
docs/superpowers/plans/: 2026-03-29-level2-rasterization.md  2026-03-29-projection-hooks.md  2026-03-31-cmake-migration.md  2026-03-31-data-acquisition.md  2026-04-01-meteorological-features.md
docs/superpowers/specs/: 2026-03-29-level2-rasterization-design.md  2026-03-29-projection-hooks-design.md  2026-03-31-cmake-migration-design.md  2026-03-31-data-acquisition-design.md  2026-04-01-meteorological-features-design.md
examples/: CMakeLists.txt  Makefile  level2_info.c  proj.c  proj_test.c  render_features.c  test_geojson.c  test_url_builders.c
include/nexrad/: aws.h  feature.h  geo.h  image.h  level2.h  message.h  packet.h  station.h
src/: CMakeLists.txt  Makefile  aws.c  feature.c  geo.c  geojson.c  image.c  level2.c  message.c  packet.c  radial.c  station.c  station_data.c  util.c  util.h
